--- a/.env
+++ b/.env
@@ -12,7 +12,7 @@ REACT_APP_GRAPHQL_URL_PREFIX="https://api.thegraph.com"
 # REACT_APP_GRAPHQL_SWAP_NAME="sashimi/binance"
 REACT_APP_GRAPHQL_SWAP_NAME="mar/swap2"
 # 原生币的symbol
-REACT_APP_NATIVE_TOKEN_SYMBOL="BNB"
+REACT_APP_NATIVE_TOKEN_SYMBOL="META"
 # 稳定币-WRAPPAED native token的pair地址，注意小写
 REACT_APP_STABLE_NATIVE_PAIR_ADDRESS="0x8a32D5A23C4A0205a0bfB41179F14D6Ac528b566"
 # 稳定币在pair中的index
